<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#FFFFFF"
    android:layout_height="match_parent"
    tools:context=".activity.WriteMood">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/title2"
        android:background="#b1e8f7">
        <TextView
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:id="@+id/back4"
            android:gravity="center_vertical"
            android:text="@string/backPyq"
            android:textSize="22sp"/>

        <TextView
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:textSize="25sp"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"
            android:text="@string/moodTitle" />

        <Button
            android:layout_width="70dp"
            android:layout_height="30dp"
            android:gravity="center"
            android:textSize="22sp"
            android:id="@+id/publishMood"
            android:background="#7fdcfa"
            android:layout_margin="10dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:text="@string/report"/>
    </RelativeLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="270dp"
        android:inputType="textMultiLine"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/title2"
        android:layout_marginTop="5dp"
        android:gravity="start"
        android:autofillHints=""
        android:id="@+id/moodText"
        android:scrollbars="vertical"
        android:background="@drawable/moodtext"
        android:lineSpacingExtra="10dp"
        android:maxLength="140"
        android:hint="@string/youMood" />

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/dw"
        android:layout_marginStart="20dp"
        android:contentDescription="@string/des"
        android:layout_marginLeft="20dp"
        android:id="@+id/gps"
        android:layout_marginTop="10dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/moodText" />

    <TextView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:text="@string/whoCanSee"
        android:textSize="15sp"
        android:layout_toLeftOf="@+id/quanxian"
        android:gravity="center"
        android:layout_below="@+id/moodText"/>

    <RadioGroup
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@+id/moodText"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="20dp"
        android:id="@+id/quanxian">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/self"
            android:textSize="13sp"
            android:id="@+id/self" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/members"
            android:textSize="13sp"
            android:id="@+id/member" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all"
            android:checked="true"
            android:textSize="13sp"
            android:id="@+id/all" />


    </RadioGroup>

    <TextView
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/gps"
        android:id="@+id/gpsText"
        android:gravity="center"
        android:text="@string/add"/>

    <TextView
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:gravity="center"
        android:id="@+id/chooseYourMood"
        android:layout_below="@+id/gpsText"
        android:text="@string/moodImg" />



        <RadioGroup
            android:layout_width="330dp"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:layout_below="@id/chooseYourMood"
            android:gravity="bottom"
            android:layout_centerHorizontal="true"
            android:id="@+id/moodImg">
            <RadioButton
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:text="@string/happy"
                android:checked="true"

                android:textSize="13sp"
                android:id="@+id/happy" />

            <RadioButton
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:text="@string/upset"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:textSize="13sp"
                android:id="@+id/upset" />

            <RadioButton
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:text="@string/angry"
                android:textSize="13sp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:id="@+id/angry" />

        </RadioGroup>

        <LinearLayout
            android:layout_width="360dp"
            android:layout_height="110dp"
            android:orientation="horizontal"
            android:id="@+id/moodImg2"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/moodImg">

            <ImageView
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:contentDescription="@string/des"
                android:src="@drawable/happy"/>
            <ImageView
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:contentDescription="@string/des"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:src="@drawable/upset" />
            <ImageView
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:contentDescription="@string/des"
                android:layout_marginLeft="10dp"
                android:src="@drawable/angry" />

        </LinearLayout>

<!--        -->


</RelativeLayout>