<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/tk"
    tools:context=".activity.LoginActivity">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_above="@+id/uname2"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:src="@drawable/titlelog" />

    <TextView
        android:id="@+id/updatePass"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:gravity="center"
        android:text="@string/updatePwd"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/uname2"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:autofillHints="@string/tip1"
        android:gravity="center"
        android:hint="@string/tip1"
        android:inputType="text"
        android:textSize="22dp" />

    <EditText
        android:id="@+id/pwd2"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_below="@+id/uname2"
        android:layout_centerHorizontal="true"
        android:autofillHints="@string/tip2"
        android:gravity="center"
        android:hint="@string/tip2"
        android:inputType="textPassword"
        android:textSize="22dp" />

    <TextView
        android:id="@+id/reg"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_below="@id/pwd2"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/regHref"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/forget"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_below="@id/pwd2"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:gravity="center"
        android:text="@string/forget"
        android:textSize="20dp" />

    <Button
        android:id="@+id/log"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_below="@+id/forget"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/reg"
        android:gravity="center"
        android:text="@string/logBtn"
        android:textSize="28sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:text="@string/define"
        android:textSize="15sp" />

</RelativeLayout>