<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="0dp"
    android:background="@drawable/tk"
    tools:context=".activity.Index">

    <TextView
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:text="@string/backLogin"
        android:id="@+id/backlog"
        android:textSize="20sp" />
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:id="@+id/logo"
        android:background="@drawable/yd"
        android:contentDescription="@string/logoImg"
        android:src="@drawable/logop" />
    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_below="@+id/logo"
        android:contentDescription="@string/pyqImg"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="60dp"
        android:id="@+id/pyq"
        android:src="@drawable/pyq" />
    <TextView
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_below="@+id/pyq" />

    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_below="@+id/logo"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:src="@drawable/ql"
        android:contentDescription="@string/jsbImg"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="60dp"
        android:id="@+id/ql" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="2dp"
        android:background="#6ed5ec"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:contentDescription="@string/des"
            android:layout_gravity="center"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:src="@drawable/love" />
        <ImageView
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:contentDescription="@string/des"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:src="@drawable/yun" />
        <ImageView
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_gravity="center"
            android:contentDescription="@string/des"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:src="@drawable/js" />
        <ImageView
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_gravity="center"
            android:contentDescription="@string/des"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:src="@drawable/kf" />
    </LinearLayout>

</RelativeLayout>